--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "github-issue-reports",
-  "version": "0.1.3",
-  "description": "Generate reports on Github issues.",
-  "homepage": "https://github.com/thody/github-issue-reports",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:thody/github-issue-reports.git"
-  },
-  "bugs": {
-    "url": "https://github.com/thody/github-issue-reports"
-  },
-  "main": "bin/github-issue-reports.js",
-  "preferGlobal": "true",
-  "bin": {
-    "github-issue-reports": "bin/github-issue-reports.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Adam Thody",
-  "license": "MIT",
-  "dependencies": {
-    "lodash": "^2.4.1",
-    "jade": "^1.8.2",
-    "dateformat": "^1.0.11",
-    "moment": "^2.8.4",
-    "commander": "^2.5.1",
-    "request-promise": "^0.3.2"
-  }
+    "name": "github-issue-reports",
+    "version": "0.1.3",
+    "description": "Generate reports on Github issues.",
+    "homepage": "https://github.com/thody/github-issue-reports",
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:thody/github-issue-reports.git"
+    },
+    "bugs": {
+        "url": "https://github.com/thody/github-issue-reports"
+    },
+    "main": "bin/github-issue-reports.js",
+    "preferGlobal": true,
+    "bin": {
+        "github-issue-reports": "bin/github-issue-reports.js"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Adam Thody",
+    "license": "MIT",
+    "dependencies": {
+        "lodash": "^2.4.1",
+        "jade": "^1.8.2",
+        "dateformat": "^1.0.11",
+        "moment": "^2.8.4",
+        "commander": "^2.5.1",
+        "request-promise": "^0.3.2"
+    }
 }
