--- a/package.json
+++ b/package.json
@@ -16,12 +16,8 @@
   },
   "homepage": "https://github.com/usnistgov/github-branch-reports#readme",
   "dependencies": {
-    "commander": "^2.5.1",
-    "dateformat": "^1.0.11",
-    "jade": "^1.8.2",
-    "lodash": "^2.4.1",
-    "moment": "^2.8.4",
-    "request-promise": "^0.3.2"
-  },
-  "devDependencies": {}
+    "commander": "^7.1.0",
+    "express": "^4.17.1",
+    "loader": "^2.1.1"
+  }
 }
